  Meyer).

* Allow packages to be upgraded, e.g., ``pip install Package==0.1``
  then ``pip install Package==0.2``.

* Allow installing/upgrading to Package==dev (fix "Source version does not
  match target version" errors).

* Fixed a bug with pip install --download and editable packages, where
  directories were being set with 0000 permissions, now defaults to 755.

0.5.1
-----

* Fixed a couple little bugs, with git and with extensions.

0.5
---

* Added ability to override the default log file name (``pip-log.txt``)
  with the environmental variable ``$PIP_LOG_FILE``.

* Made the freeze command print installed packages to stdout instead of
  writing them to a file. Use simple redirection (e.g.
  ``pip freeze > stable-req.txt``) to get a file with requirements.

* Fixed problem with freezing editable packages from a Git repository.

* Added support for base URLs using ``<base href='...'>`` when parsing
  HTML pages.

* Fixed installing of non-editable packages from version control systems.

* Fixed issue with Bazaar's bzr+ssh scheme.

* Added --download-dir option to the install command to retrieve package
  archives. If given an editable package it will create an archive of it.

* Added ability to pass local file and directory paths to ``--find-links``,
  e.g. ``--find-links=file:///path/to/my/private/archive``

* Reduced the amount of console log messages when fetching a page to find a
  distribution was problematic. The full messages can be found in pip-log.txt.

* Added ``--no-deps`` option to install ignore package dependencies

* Added ``--no-index`` option to ignore the package index (PyPI) temporarily

* Fixed installing editable packages from Git branches.

* Fixes freezing of editable packages from Mercurial repositories.

* Fixed handling read-only attributes of build files, e.g. of Subversion and
  Bazaar on Windows.

* When downloading a file from a redirect, use the redirected
  location's extension to guess the compression (happens specifically