@@ -16,6 +16,8 @@ tip
 * Fixed a bug with pip install --download and editable packages, where
   directories were being set with 0000 permissions, now defaults to 755.
 
+* Fixed uninstallation of easy_installed console_scripts.
+
 0.5.1
 -----
 
